# customer-feature-store

./: .gitignore  Documentation.md  README.md  dump.rdb  pyproject.toml
feature_repo/: __init__.py  feature_store.yaml
feature_repo/data/: test_task_data.csv  test_task_data.md  test_task_data.parquet
scripts/: __init__.py  convert_to_parquet.py
src/customer_feature_store/: config.py  config.yaml
src/customer_feature_store/cli/: main.py
src/customer_feature_store/core/: feature_definitions.py
src/customer_feature_store/service/: feature_service.py
